Revision history for Perl module Test::TCP

{{$NEXT}}

2.14 2015-09-29T22:36:44Z

    - Fix race condition in t/10_oo.t(exodist)

2.13 2015-07-24T02:30:17Z

    - check whether the OS implements IPV6_V6ONLY before using it

2.12 2015-05-18T08:14:30Z

    - Fixed spelling mistake
      (Reported by gregor herrmann)

2.11 2015-04-07T00:07:25Z
    - declare IO::Socket::IP as dependency #36

2.10 2015-04-06T19:23:43Z
    - ensure the test object is DESTROYed when Net::EmptyPort::empty_port exits https://rt.cpan.org/Public/Bug/Display.html?id=103299

2.09 2015-04-02T21:55:18Z
    - fix tests running for a long time on systems that do not support IPv6 #35

2.08 2015-04-02T04:04:33Z
    - add `host` argument to various functions for binding to arbitrary address (incl. IPv6) #33
    - add function `Net::EmptyPort::can_bind` #34

2.07 2015-01-22T10:44:21Z

    Old versions of Test::SharedFork are incompatibles with the new Test::Builder: I had "missing TB2::History" errors.
    It would be helpful to upgrade the Test::SharedFork dependency to help the user to avoid to encounter such hard to track deep errors.
    (Reported by dolmen++)


2.06 2014-07-01T10:01:44Z

    commit 8259d5eb28919bc766c8b500151d5be7e944b7f2
    Author: Petr Písař <ppisar@redhat.com>
    Date:   Fri Jun 27 13:37:20 2014 +0200

        Wait infinitely if max_wait is negative

        The t/12_pass_wait_port_options.t will fail if the server process does not
        start listening in max_wait limit. This can happen if the host is
        loaded or just if the scheduler decides to postpone the process.

        This patch adds possibility to wait infitely by passing a negative
        max_wait value to the Test::TCP object and it changes the
        t/12_pass_wait_port_options.t test to use this feature.

        https://github.com/tokuhirom/Test-TCP/issues/28
        Signed-off-by: Petr Písař <ppisar@redhat.com>

2.05 2014-06-24T00:49:45Z

    - Release again with latest minil.
