@@ -2,6 +2,8 @@ Revision history for Perl module Test::TCP
 
 {{$NEXT}}
 
+    - Add listen_socket function and listen option for race-free operation
+
 2.14 2015-09-29T22:36:44Z
 
     - Fix race condition in t/10_oo.t(exodist)
